@@ -153,6 +153,8 @@ New Features
   a connection to zookeeper has been lost and there is a possibility of stale data on the node the request is coming
   from. (Keith Laban, Dennis Gove)
 
+* SOLR-8522: Make it possible to use ip fragments in replica placement rules , such as ip_1, ip_2 etc (Arcadius Ahouansou, noble)
+
 Bug Fixes
 ----------------------
 * SOLR-8386: Add field option in the new admin UI schema page loads up even when no schemaFactory has been
